--- a/backend/gateway/package.json
+++ b/backend/gateway/package.json
@@ -10,10 +10,10 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "typescript": "^5.4.4",
-    "ts-node-dev": "^2.0.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30"
+    "@types/node": "^20.11.30",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.4"
   },
   "license": "MIT"
 }
