--- a/backend/package.json
+++ b/backend/package.json
@@ -4,5 +4,15 @@
   "workspaces": [
     "gateway"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "@stylistic/eslint-plugin": "^4.4.0",
+    "eslint": "^9.27.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.0"
+  },
+  "scripts": {
+    "lint": "eslint ."
+  }
 }
