--- a/backend/gateway/package.json
+++ b/backend/gateway/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint ."
   },
   "dependencies": {
     "express": "^4.18.2"
