--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,10 @@
     "typescript-eslint": "^8.33.0"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "yarn workspaces run lint",
+    "build": "yarn workspaces run build"
+  },
+  "engines": {
+    "node": "24.x.x"
   }
 }
