--- a/backend/gateway/package.json
+++ b/backend/gateway/package.json
@@ -5,14 +5,22 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.30",
+    "@types/supertest": "^6.0.3",
+    "eslint": "^9.28.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
   },
