--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-test-publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout code
@@ -45,5 +48,5 @@ jobs:
       - name: Build and push Docker image
         run: |
           cd backend
-          docker build -f gateway/Dockerfile -t ghcr.io/eugene-taran/gateway:latest .
-          docker push ghcr.io/eugene-taran/gateway:latest
+          docker build -f gateway/Dockerfile -t ghcr.io/${{ github.repository_owner }}/gateway:latest .
+          docker push ghcr.io/${{ github.repository_owner }}/gateway:latest
